# AeroP2Pchat

./: .gitignore  LICENSE  README.md  capacitor.config.json  config.json  create-setup.iss  deno.json  electron-builder.config.cjs  electron.vite.config.js  index.html  install.sh  package-lock.json  package.json  scratch-electron-check.cjs  test_syntax.ps1  update.cjs  vite.chrome-addon.config.js  vite.config.js  vite.web.config.js
.github/: FUNDING.yml
.github/workflows/: build.yml  cd.yml  linux-appimage-release.yml  pages.yml  release.yml
.pages/: .gitignore  fix-images.cjs  index.html  install.ps1  install.sh  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.pages/public/: install.ps1  install.sh  privacy.html
.pages/src/: App.tsx  CMD.tsx  DownloadButton.tsx  Terminal.tsx  index.css  main.tsx  store-badge.d.ts
.tools/inno/: ISCmplr.dll.issig  ISPP.dll.issig  Setup.e32.issig  SetupCustomStyle.e32.issig  SetupLdr.e32.issig  SetupLdr.e64.issig
android/: .gitignore  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
artifacts/: latest.yml
artifacts/artifacts-Windows-x64/: update_manifest_windows.json
chrome-addon/: background.js  manifest.json
docs/: index.html  install.sh  style.css
docs/wiki/: index.html  linux.html  release.html  troubleshooting.html
scripts/: build-android.cjs  build-chrome-addon.cjs  build-inno.cjs  build-linux-docker.cjs  build-store.cjs  build-web.cjs  build-win.cjs  ci-append-linux-latest.cjs  ci-build-release.cjs  ci-create-latest.cjs  clean-desktop-staging.ts  configure-store-cli.cjs  deploy-pages.cjs  dev-two.cjs  extract-dom.cjs  generate-appx-assets.ps1  install-android-device.cjs  publish-store.cjs  release-help.cjs  release.cjs  run-electron-vite.cjs  test-config-crypto.cjs
scripts/windows-cli/: aerop2p.cmd  aerop2p.ps1
src/: index.html  main.js  preload.js  renderer.js  styles.css  tauri-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/deno/: main.ts
src/main/: config-crypto.js  index.js
src/preload/: index.js
src/renderer/: boot-theme.js  changelog.css  changelog.html  changelog.js  deno-bridge.js  design.css  index.html  index.js  platform.js  styles.css  toast.css  toast.html  toast.js
website/: package-lock.json  package.json
website/src/: App.tsx  (+1 more)
(+23 files in other folders)
